feat: complete db wiring and mission control web integration

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 HOST=127.0.0.1
 PORT=4242
-MISSION_CONTROL_DB_PATH=./data/mission-control.sqlite
+DATABASE_URL=postgresql://openclaw_test_user:openclaw_local_dev_pw_2026@localhost:5432/openclaw_test_db
+MISSION_CONTROL_API_TOKEN=
 OPENCLAW_WORKSPACE=/Users/apollo/.openclaw/workspace
 HOT_INTERVAL_MS=10000
 WARM_INTERVAL_MS=120000
