--- a/apps/mission-control-web/package.json
+++ b/apps/mission-control-web/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "next": "16.1.6",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^24.5.2",
