feat: unify mission control UI and remove API bridge dependency

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,18 @@
 HOST=127.0.0.1
 PORT=4242
-DATABASE_URL=postgresql://openclaw_test_user:openclaw_local_dev_pw_2026@localhost:5432/openclaw_test_db
+
+# Neon runtime (pooled) URL
+DATABASE_URL=postgresql://<user>:<password>@<project>-pooler.<region>.aws.neon.tech/<database>?sslmode=require
+
+# Neon direct/admin URL for migrations + seed
+DATABASE_URL_DIRECT=postgresql://<user>:<password>@<project>.<region>.aws.neon.tech/<database>?sslmode=require
+
+# Optional stage-specific fallbacks (used when DATABASE_URL is not set)
+DATABASE_URL_DEV=
+DATABASE_URL_STAGING=
+DATABASE_URL_PROD=
+MISSION_CONTROL_ENV=development
+
 MISSION_CONTROL_API_TOKEN=
 OPENCLAW_WORKSPACE=/Users/apollo/.openclaw/workspace
 HOT_INTERVAL_MS=10000
@@ -8,3 +20,7 @@ WARM_INTERVAL_MS=120000
 COLLECTOR_MAX_RETRIES=3
 COLLECTOR_BACKOFF_BASE_MS=500
 COLLECTOR_BACKOFF_MAX_MS=10000
+
+# Session observability tuning
+SESSION_ACTIVE_WINDOW_MS=900000
+SESSIONS_LIST_LIMIT=500
