--- a/apps/mission-control-web/.env.example
+++ b/apps/mission-control-web/.env.example
@@ -1,2 +1,8 @@
-MISSION_CONTROL_API_BASE_URL=http://127.0.0.1:4242
+# Required: Neon pooled connection string used by Next.js server-side reads
+DATABASE_URL=postgresql://<user>:<password>@<project>-pooler.<region>.aws.neon.tech/<database>?sslmode=require
+
+# Optional: if you still expose backend API routes with token auth (legacy bridge path)
 MISSION_CONTROL_API_TOKEN=
+
+# Deprecated legacy bridge env (no longer used by core dashboard pages)
+# MISSION_CONTROL_API_BASE_URL=
