--- a/apps/mission-control-web/package.json
+++ b/apps/mission-control-web/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "next": "16.1.6",
+    "pg": "^8.18.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-markdown": "^10.1.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.5.2",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "tsx": "^4.20.5",
