--- a/apps/mission-control-web/package.json
+++ b/apps/mission-control-web/package.json
@@ -13,6 +13,7 @@
     "test:ci": "npm run lint && npm run test && npm run build"
   },
   "dependencies": {
+    "@xyflow/react": "^12.10.1",
     "next": "16.1.6",
     "pg": "^8.18.0",
     "react": "19.0.0",
