--- a/apps/mission-control-web/package.json
+++ b/apps/mission-control-web/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@xyflow/react": "^12.10.1",
+    "dagre": "^0.8.5",
     "next": "16.1.6",
     "pg": "^8.18.0",
     "react": "19.0.0",
@@ -22,6 +23,7 @@
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
+    "@types/dagre": "^0.7.53",
     "@types/node": "^24.5.2",
     "@types/pg": "^8.15.6",
     "@types/react": "^19.0.0",
